# django-simple-sso

./: README.md  pyproject.toml
simple_client/: db.sqlite3  manage.py
simple_client/simple_client/: asgi.py  settings.py  urls.py  views.py  wsgi.py
simple_gateway/: db.sqlite3  manage.py
simple_gateway/keys/: jwt_private.rsa  jwt_public.pub
simple_gateway/simple_gateway/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
simple_gateway/simple_gateway/migrations/: 0001_initial.py  0002_auto_20230526_1450.py  0003_auto_20230526_1509.py  0004_ssoauthenticated_auth_token.py  0005_remove_ssoauthrequest_next_path.py
simple_gateway/simple_gateway/templates/registration/: login.html
